# introduction-to-optimization-methods

./: .pre-commit-config.yaml  README.md  pyproject.toml
section2/: example2-3.py  example2-4.py  example2-6.py  exercises.md
